# autonomy_stack_diablo_setup-humble

./: frames_2025-07-06_08.44.12.gv  message_1.txt  sss.py  system_real_robot_with_exploration_planner.sh  system_real_robot_with_route_planner.sh  terrain_analysis_final_fix.md  terrain_analysis_fix_summary.md  test_terrain_analysis.sh  test_terrain_analysis_fixed.sh
src/base_autonomy/: way_point_test.py
src/base_autonomy/local_planner/: CMakeLists.txt  package.xml
src/base_autonomy/local_planner/launch/: local_planner.launch
src/base_autonomy/local_planner/paths/: paths.ply
src/base_autonomy/local_planner/src/: localPlanner.cpp  localPlanner_8-19.cpp  pathFollower.cpp
src/base_autonomy/sensor_scan_generation/src/: sensorScanGeneration.cpp
src/base_autonomy/terrain_analysis/: CMakeLists.txt
src/base_autonomy/terrain_analysis/launch/: terrain_analysis.launch
src/base_autonomy/terrain_analysis/src/: terrainAnalysis.cpp  terrainAnalysis_copy.cpp
src/base_autonomy/terrain_analysis_ext/launch/: terrain_analysis_ext.launch
src/base_autonomy/terrain_analysis_ext/src/: terrainAnalysisExt.cpp  terrainAnalysisExt_copy.cpp
src/base_autonomy/vehicle_simulator/launch/: system_real_robot_with_route_planner.launch
src/base_autonomy/vehicle_simulator/rviz/: vehicle_simulator.rviz
src/base_autonomy/vehicle_simulator/src/: vehicleSimulator.cpp
src/base_autonomy/waypoint_example/src/: waypointExample.cpp
src/clock_publisher/: CMakeLists.txt  package.xml
src/clock_publisher/launch/: clock_publisher_node.launch.py
src/clock_publisher/src/: clock_publisher_node.py
src/exploration_planner/tare_planner/config/: indoor.yaml  outdoor.yaml
src/exploration_planner/tare_planner/or-tools_arm64_debian-11_cpp_v9.8.3296/or-tools_aarch64_Debian-11_cpp_v9.8.3296/share/pkgconfig/: zlib.pc
src/exploration_planner/tare_planner/src/sensor_coverage_planner/: sensor_coverage_planner_ground.cpp
src/image_compressed/: CMakeLists.txt  package.xml
src/image_compressed/launch/: image_compressed_node.launch.py
src/image_compressed/src/: image_compressed_node.cpp
src/pointcloud_intensity_converter/: CMakeLists.txt  package.xml
src/pointcloud_intensity_converter/launch/: pointcloud_intensity_node.launch.py
src/pointcloud_intensity_converter/src/: pointcloud_intensity_node.cpp  pointcloud_intensity_node_ori.cpp
src/route_planner/far_planner/config/: indoor.yaml
src/route_planner/far_planner/include/far_planner/: far_planner.h
src/route_planner/far_planner/src/: far_planner.cpp
src/timestamp_fixer/: CMakeLists.txt  package.xml
src/timestamp_fixer/config/: timestamp_fixer_params.yaml
src/timestamp_fixer/launch/: timestamp_fixer_node.launch.py
src/timestamp_fixer/src/: timestamp_fixer_node.py
src/type_converter/: CMakeLists.txt  package.xml
src/type_converter/launch/: type_converter.launch.py
src/type_converter/src/: float64_to_float32_converter.cpp
src/utilities/domain_bridge/config/: diablo_bridge.yaml
src/utilities/goalpoint_rviz_plugin/src/: goalpoint_tool.cpp
src/utilities/teleop_rviz_plugin/src/: teleop_panel.cpp
src/utilities/teleop_rviz_plugin_plus/src/: teleop_panel.cpp
src/utilities/waypoint_rviz_plugin/src/: waypoint_tool.cpp
