<?xml version="1.0"?>
<package format="3">
  <name>clock_publisher</name>
  <version>0.0.1</version>
  <description>Publishes current time to /clock topic</description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rosgraph_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
