<?xml version="1.0"?>
<package format="3">
  <name>image_compressed</name>
  <version>0.0.1</version>
  <description>Compresses Image messages from left and right cameras</description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
