<?xml version="1.0"?>
<package format="3">
  <name>pointcloud_intensity_converter</name>
  <version>0.0.1</version>
  <description>Converts PointCloud2 messages by adding intensity=1.0 to each point</description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>
  
  <!-- 添加TF2相关依赖 -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_eigen</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
